Compiler_project/MyCompiler.java
/* MyCompiler.java */
/* Generated By:JavaCC: Do not edit this line. MyCompiler.java */
import java.io.FileInputStream;
import java.util.*;




public class MyCompiler implements MyCompilerConstants {
    public static void main(String[] args) throws Exception {
        MyCompiler compiler = new MyCompiler(new FileInputStream("test.txt"));

        try {
            ASTNode ast = compiler.Start();
            System.out.println("Syntax validation successful");
            ast.print("");
            SymbolTable.print();

        } catch (ParseException e) {
            System.out.println("Syntax Error at line " +
                    e.currentToken.next.beginLine + ", column " +
                    e.currentToken.next.beginColumn);
        }
    }

/***************************************************
 * START / PROGRAM
 ***************************************************/
  static final public ASTNode Start() throws ParseException {ASTNode root = new ASTNode("Program");
    ASTNode stmt;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case FOR:
      case RETURN:
      case INT:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      stmt = Statement();
root.add(stmt);
    }
    jj_consume_token(0);
{if ("" != null) return root;}
    throw new Error("Missing return statement in function");
}

/***************************************************
 * STATEMENT
 ***************************************************/
  static final public ASTNode Statement() throws ParseException {Token id;
    ASTNode expr;
    ASTNode node;
    ASTNode init;
    ASTNode cond;
    ASTNode update;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      id = jj_consume_token(ID);
      jj_consume_token(ASSIGN);
      expr = Expression();
      jj_consume_token(SEMICOLON);
SymbolTable.add(
        id.image,
        "int",
        "global",
        id.beginLine
    );

    node = new ASTNode("VarDecl");
    node.add(new ASTNode("Identifier", id.image));
    node.add(expr);
    {if ("" != null) return node;}
      break;
      }
    case ID:{
      id = jj_consume_token(ID);
      jj_consume_token(ASSIGN);
      expr = Expression();
      jj_consume_token(SEMICOLON);
node = new ASTNode("Assign");
        node.add(new ASTNode("Identifier", id.image));
        node.add(expr);
        {if ("" != null) return node;}
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      expr = Expression();
      jj_consume_token(SEMICOLON);
node = new ASTNode("Return");
        node.add(expr);
        {if ("" != null) return node;}
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      cond = Condition();
      jj_consume_token(RPAREN);
      node = Block();
ASTNode ifNode = new ASTNode("If");
        ifNode.add(cond);
        ifNode.add(node);
        {if ("" != null) return ifNode;}
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      cond = Condition();
      jj_consume_token(RPAREN);
      node = Block();
ASTNode whileNode = new ASTNode("While");
        whileNode.add(cond);
        whileNode.add(node);
        {if ("" != null) return whileNode;}
      break;
      }
    case FOR:{
      jj_consume_token(FOR);
      jj_consume_token(LPAREN);
      init = ForInit();
      jj_consume_token(SEMICOLON);
      cond = Condition();
      jj_consume_token(SEMICOLON);
      update = ForUpdate();
      jj_consume_token(RPAREN);
      node = Block();
ASTNode forNode = new ASTNode("For");
        forNode.add(init);
        forNode.add(cond);
        forNode.add(update);
        forNode.add(node);
        {if ("" != null) return forNode;}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

/***************************************************
 * CONDITION
 ***************************************************/
  static final public ASTNode Condition() throws ParseException {ASTNode left;
    ASTNode right;
    Token op;
    left = Expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GT:{
      op = jj_consume_token(GT);
      break;
      }
    case LT:{
      op = jj_consume_token(LT);
      break;
      }
    case GE:{
      op = jj_consume_token(GE);
      break;
      }
    case LE:{
      op = jj_consume_token(LE);
      break;
      }
    case EQ:{
      op = jj_consume_token(EQ);
      break;
      }
    case NE:{
      op = jj_consume_token(NE);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    right = Expression();
ASTNode cond = new ASTNode("BinaryOp", op.image);
        cond.add(left);
        cond.add(right);
        {if ("" != null) return cond;}
    throw new Error("Missing return statement in function");
}

/***************************************************
 * BLOCK
 ***************************************************/
  static final public ASTNode Block() throws ParseException {ASTNode block = new ASTNode("Block");
    ASTNode s;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case FOR:
        case RETURN:
        case INT:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        s = Statement();
block.add(s);
      }
      jj_consume_token(RBRACE);
{if ("" != null) return block;}
      break;
      }
    case IF:
    case WHILE:
    case FOR:
    case RETURN:
    case INT:
    case ID:{
      s = Statement();
block.add(s);
        {if ("" != null) return block;}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

/***************************************************
 * FOR INIT
 ***************************************************/
  static final public ASTNode ForInit() throws ParseException {Token id;
    ASTNode expr;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      id = jj_consume_token(ID);
      jj_consume_token(ASSIGN);
      expr = Expression();
SymbolTable.add(
        id.image,
        "int",
        "for",
        id.beginLine
    );

    ASTNode n = new ASTNode("ForInit");
    n.add(new ASTNode("Identifier", id.image));
    n.add(expr);
    {if ("" != null) return n;}
      break;
      }
    case ID:{
      id = jj_consume_token(ID);
      jj_consume_token(ASSIGN);
      expr = Expression();
ASTNode n = new ASTNode("ForInit");
        n.add(new ASTNode("Identifier", id.image));
        n.add(expr);
        {if ("" != null) return n;}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

/***************************************************
 * FOR UPDATE
 ***************************************************/
  static final public ASTNode ForUpdate() throws ParseException {Token id;
    ASTNode expr;
    id = jj_consume_token(ID);
    jj_consume_token(ASSIGN);
    expr = Expression();
ASTNode n = new ASTNode("ForUpdate");
        n.add(new ASTNode("Identifier", id.image));
        n.add(expr);
        {if ("" != null) return n;}
    throw new Error("Missing return statement in function");
}

/***************************************************
 * FACTOR
 ***************************************************/
  static final public ASTNode Factor() throws ParseException {Token t;
    ASTNode e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:{
      t = jj_consume_token(NUM);
{if ("" != null) return new ASTNode("Number", t.image);}
      break;
      }
    case ID:{
      t = jj_consume_token(ID);
{if ("" != null) return new ASTNode("Identifier", t.image);}
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      e = Expression();
      jj_consume_token(RPAREN);
{if ("" != null) return e;}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

/***************************************************
 * TERM  (* and /)
 ***************************************************/
  static final public ASTNode Term() throws ParseException {ASTNode left;
    ASTNode right;
    Token op;
    left = Factor();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLY:{
        op = jj_consume_token(MULTIPLY);
        break;
        }
      case DIVIDE:{
        op = jj_consume_token(DIVIDE);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = Factor();
ASTNode bin = new ASTNode("BinaryOp", op.image);
            bin.add(left);
            bin.add(right);
            left = bin;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

/***************************************************
 * EXPRESSION (+ and -)
 ***************************************************/
  static final public ASTNode Expression() throws ParseException {ASTNode left;
    ASTNode right;
    Token op;
    ASTNode bin;
    left = Term();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = Term();
bin = new ASTNode("BinaryOp", op.image);
            bin.add(left);
            bin.add(right);
            left = bin;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MyCompilerTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x80003e,0x80003e,0x1f80,0x80003e,0x82003e,0x800020,0xc80000,0x18000,0x18000,0x6000,0x6000,};
	}

  /** Constructor with InputStream. */
  public MyCompiler(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MyCompiler(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new MyCompilerTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MyCompiler(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new MyCompilerTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new MyCompilerTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MyCompiler(MyCompilerTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MyCompilerTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[30];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 11; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 30; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
